# md-viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README.md  THIRD_PARTY_NOTICES  cliff.toml
.claude/: settings.json
.claude/commands/: changelog.md  new-devlog.md  session-start.md
.claude/hooks/: branch-protect.sh  branch-protect.sh.bak
.claude/rules/: build-commands.md  context-awareness.md  devlog-workflow.md  egui-patterns.md  mcp-testing.md  refactoring-rules.md  release-workflow.md  system-dependencies.md  worktree-workflow.md
.github/workflows/: ci.yml  release.yml  snap-push-metadata.yml
aur/: PKGBUILD
aur-bin/: PKGBUILD
aur/md-viewer-bin/: PKGBUILD
crates/egui_commonmark/: Cargo.toml
crates/egui_commonmark/egui_commonmark/: Cargo.toml  THIRD_PARTY_NOTICES
crates/egui_commonmark/egui_commonmark/examples/: mixing.rs
crates/egui_commonmark/egui_commonmark/src/: lib.rs
crates/egui_commonmark/egui_commonmark/src/parsers/: pulldown.rs
crates/egui_commonmark/egui_commonmark/tests/: wrapping.rs
crates/egui_commonmark/egui_commonmark_backend/: Cargo.toml
crates/egui_commonmark/egui_commonmark_backend/src/: elements.rs  html_table.rs  lib.rs  misc.rs  pulldown.rs  typography.rs
crates/egui_commonmark/egui_commonmark_macros/: Cargo.toml
crates/egui_commonmark/egui_commonmark_macros/src/: generator.rs  lib.rs
crates/egui_commonmark/egui_commonmark_macros/tests/fail/: commonmark_str_not_found.rs  incorrect_immutable.rs  incorrect_type.rs
crates/egui_commonmark/egui_commonmark_macros/tests/pass/: book.rs  commonmark.rs  commonmark_str.rs  ui_hygiene.rs
data/: io.github.aydiler.md-viewer.metainfo.xml  md-viewer.desktop
docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  EGUI_WORKFLOW.md  IMPLEMENTATION-PLAN.md  KEYBOARD_SHORTCUTS.md  LESSONS.md  TARGET_METRICS.md  ZOOM_FEATURE_PLAN.md
docs/decisions/: 0000-record-architecture-decisions.md  0001-vendor-egui-commonmark.md  0002-bare-repo-worktree-workflow.md  0003-custom-tab-system.md  adr-template.md
docs/devlog/: 001-link-navigation.md  002-line-height-investigation.md  003-evidence-based-typography.md  004-minimap.md  005-devlog-workflow-improvement.md  006-outline-scroll-fix.md  007-outline-expand-collapse-buttons.md  008-file-explorer.md  009-drag-scroll.md  009-process-rules.md  010-docs-workflow.md  011-expand-collapse-all.md  012-optimal-window-width.md  013-explorer-live-reload.md  013-fix-outline-scroll.md  014-font-fallback.md  015-startup-perf.md  016-distribution.md  016-wide-inline-code-wrapping.md  017-flathub-prep.md  018-wide-inline-code-wrapping.md  019-search-find.md  020-virtualize-large-docs.md  021-table-columns-resizable.md  022-table-wheel-scroll.md  023-full-width-toggle.md  024-aur-bin-package.md  025-crates-publish.md  026-ci-hardening.md  031-search-scroll-lock.md  032-table-scroll-wheel.md  033-table-shift-wheel.md  034-cli-default-detach.md  034-keyboard-scroll-keys.md  035-keyboard-scroll-keys.md  036-open-directory.md  037-welcome-page.md  038-math-rendering-fixes.md  039-math-render-perf.md  040-inline-math-alignment.md  (+11 more)
docs/superpowers/plans/: 2026-06-03-cli-default-detach-plan.md
docs/superpowers/specs/: 2026-05-14-search-find-all-design.md  2026-06-03-cli-default-detach-design.md
flatpak/: cargo-sources.json  io.github.aydiler.md-viewer.yaml
patches/: 0001-fix-wide-inline-code-wrapping.patch
scripts/: check-fork-publishable.sh  install.sh  publish-crates.sh
snap/: snapcraft.yaml
src/: main.rs
tests/: wrapping.rs
