[package]
name = "egui_commonmark_extended"
authors = ["Erlend Walstad"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Commonmark viewer for egui - fork with typography (line height) and header position tracking"
keywords = ["commonmark", "egui", "markdown", "typography"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/egui_commonmark_extended"
include = ["src/**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]

[dependencies]
egui_commonmark_backend_extended = { workspace = true }
egui_commonmark_macros_extended = { workspace = true, optional = true }

egui_extras = { workspace = true }
egui = { workspace = true }

document-features = { workspace = true, optional = true }

pulldown-cmark = { workspace = true }

[features]
default = ["load-images", "pulldown_cmark"]

## Enable proc macros for compile time generation of egui widgets from markdown
macros = [
    "dep:egui_commonmark_macros_extended",
]

## Builds upon the `macros` feature. Enables tracking of markdown files to recompile
## when their content changes. Uses nightly features
nightly = ["macros", "egui_commonmark_macros_extended/nightly"]

# For internal debugging use only!
dump-macro = ["egui_commonmark_macros_extended/dump-macro"]

## No-op feature
pulldown_cmark = []

## Syntax highlighting for code blocks using syntect
better_syntax_highlighting = [
    "egui_commonmark_backend_extended/better_syntax_highlighting",
]

## Enable loading of images. Make sure to also opt in to what image format you need
## through the image crate.
load-images = ["egui_extras/image", "egui_extras/file"]

## Support loading svg images
svg = ["egui_extras/svg"]

## Support text rendering in SVG images (requires system fonts like Verdana)
svg_text = ["egui_extras/svg_text"]

## Images with urls will be downloaded and displayed
fetch = ["egui_extras/http"]

## Allows loading base64 image data urls from within markdown files. e.g: `data:image/png;base64,...`
## Note that this is really space inefficient. No size limit is in place for the maximum allowed
## data in the url.
##
## This enables the data urls for your entire app as it installs an egui bytes loader
## in the background.
##
## Currently this does not support wasm.
embedded_image = ["egui_commonmark_backend_extended/embedded_image"]

## Render mermaid diagram code blocks as SVG images
mermaid = ["egui_commonmark_backend_extended/mermaid"]

[dev-dependencies]
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }

image = { version = "0.25", default-features = false, features = ["png"] }
egui_commonmark_macros_extended = { workspace = true } # Tests won't build otherswise

[package.metadata.docs.rs]
features = ["better_syntax_highlighting", "document-features", "macros"]
