[package]
name = "egui_commonmark_backend_extended"
authors = ["Erlend Walstad"]

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

description = "Shared code for egui_commonmark_extended - fork with typography and header tracking"
keywords = ["commonmark", "egui"]
categories = ["gui"]
readme = "README.md"
documentation = "https://docs.rs/egui_commonmark_backend"
include = ["**/*.rs", "LICENSE-MIT", "LICENSE-APACHE", "Cargo.toml"]

[dependencies]
pulldown-cmark = { workspace = true }
egui_extras = { workspace = true }
egui = { workspace = true }

data-url = {  version = "0.3.1", optional = true }
syntect = { version = "5.0.0", optional = true, default-features = false, features = [
    "default-fancy",
] }
mermaid-rs-renderer = { version = "0.2", optional = true }

[features]
better_syntax_highlighting = ["dep:syntect"]
embedded_image = ["dep:data-url"]
mermaid = ["dep:mermaid-rs-renderer"]
